Fix double border on cells

--- a/css/PixelPainter.css
+++ b/css/PixelPainter.css
@@ -22,6 +22,7 @@ h1 {
   height: 50px;
   border: 1px solid black;
   display: inline-block;
+  margin: -1px 0 0 -1px;
 }
 button {
   padding: 5px 10px;
